# forscore-cli

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
.claude/: settings.local.json
.github/workflows/: release.yml  update-homebrew.yml
src/: cli.rs  db.rs  error.rs  itm.rs  main.rs  output.rs  setlist_sync.rs
src/commands/: bookmarks.rs  export.rs  fixes.rs  import.rs  libraries.rs  metadata.rs  mod.rs  scores.rs  setlists.rs  utils.rs
src/models/: key.rs  library.rs  meta.rs  mod.rs  score.rs  setlist.rs
tests/: diff_forscore.sh  fingerprint_forscore.sh
tests/fingerprints/: forscore-15.0.7.fingerprint  latest.fingerprint
