[package]
name = "forscore-cli"
version = "2.2.2"
edition = "2021"
description = "CLI tool for managing forScore metadata"
authors = ["Dan Hopkins"]
license = "MIT"

[[bin]]
name = "forscore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
dirs = "5"
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
plist = "1"
flate2 = "1"

[profile.release]
lto = true
strip = true
